cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(quic_install_test LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED 1)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
find_package(Quic REQUIRED)
add_executable(exec test.cpp)
target_link_libraries(exec Quic::core)
